--- a/style/style.css
+++ b/style/style.css
@@ -17,10 +17,6 @@ header {
   text-align: center;
 }
 
-header h1 {
-  margin: 0; /* Удаляем стандартные поля h1 */
-}
-
 /* анимация header */
 
 .wave {
@@ -53,10 +49,7 @@ main {
 .main-info {
   padding-top: 30px;
   margin-bottom: 40px;
-}
-
-pre code {
-  font-size: 25px;
+  text-align: center;
 }
 
 .swiper {
